Splitter page not showing imgs fixed

--- a/P3 - Splited Page/css/style.css
+++ b/P3 - Splited Page/css/style.css
@@ -21,7 +21,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(/project3/img/ps.jpg);
+    background-image: url(img/ps.jpg);
     background-size: cover;
     width: 50vw;
     transition: all 1s;
@@ -40,7 +40,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(/project3/img/xbox.jpg);
+    background-image: url(img/xbox.jpg);
     background-size: cover;
     width: 50vw;
     position: relative;
